# moonvpn

./: .cursorrules  .dockerignore  .env  .env.example  .env.test  .gitignore  @PROMPT.md  ARCHITECTURE.md  CHANGELOG.md  CONSOLIDATED-README.md  Dockerfile  Dockerfile.api  Dockerfile.bot  PROMPT.md  PROMPT_NEW.md  Prompt.md  README.md  admin_refactor_restart.sh  alembic.ini  backup.sh  check_migration.py  config.sh  docker-compose.yml  domain.sh  firewall.sh  fix_repositories.py  fix_services.py  install.sh  lessons-learned.md  main.py  maintenance.sh  me.rule.md  memories.md  monitoring.sh  moonvpn  moonvpn.code-workspace  moonvpn_db.sql  nx.json  old.md  project_explanation_fa.md  (+14 more)
.cursor/: memories.md  (+3 more)
backend/: Dockerfile  alembic.ini  entrypoint.sh  pyproject.toml  requirements.txt  setup.py  tasks.py
backend/accounts/: models.py
backend/api/api_v1/: api.py
backend/app/: main.py
backend/app/core/: config.py
backend/app/db/: base.py  database.py
backend/bot/: bot.py  config.py  decorators.py  django_setup.py  main.py
backend/bot/config/: __init__.py  admin.py  base.py  database.py  security.py  settings.py
backend/bot/database/: connection.py
backend/bot/handlers/: panel_handlers.py
backend/bot/models/: payment.py  server.py  traffic.py
backend/bot/scripts/: __init__.py  group_management.py  migrate_settings.py  run_migration.py  setup.py
backend/bot/services/: account_service.py  dashboard_service.py  payment_service.py
backend/bot/subscriptions/: __init__.py
backend/bot/utils/: __init__.py  admin.py  config.py  database.py  monitoring.py  vpn.py
backend/cli/: main.py
backend/commands/: start.py
backend/core/: config.py
backend/core/database/: config.py
backend/database/: database.py
backend/db/: alembic.ini
backend/handlers/: __init__.py  account.py  accounts.py  admin.py  buy.py  change_location.py  earnings.py  free_services.py  groups.py  help.py  location.py  monitoring.py  navigation.py  notifications.py  payment.py  payments.py  server.py  settings.py  status.py  subscription.py  subscriptions.py  users.py
backend/handlers/account/: __init__.py  account.py
backend/handlers/admin/: __init__.py  account.py  admin.py  backup.py  broadcast.py  constants.py  dashboard.py  discount.py  group_management.py  notification_hooks.py  payment.py  payment_management.py  server.py  server_management.py  servers.py  service.py  settings.py  support.py  traffic.py  user.py  user_management.py  users.py
backend/handlers/buy/: __init__.py  buy.py
backend/handlers/support/: __init__.py  support.py
backend/i18n/: en.json  fa.json
backend/keyboards/: profile.py
backend/locales/: en.json  fa.json
backend/migrations/: 0002_security_and_traffic.py  env.py
backend/models/: __init__.py  location.py  notification.py  subscription.py  user.py  vpn_account.py
backend/models/accounts/: __init__.py  user.py
backend/models/admin/: __init__.py
backend/models/notification/: __init__.py
backend/models/payment/: __init__.py  transaction.py
backend/models/security/: __init__.py
backend/models/user/: __init__.py  user.py
backend/models/vpn/: __init__.py  account.py  location.py  server.py  vpn_account.py
backend/roles/: admin.py  apps.py  models.py  serializers.py  urls.py  utils.py  views.py
backend/roles/templatetags/: role_tags.py
backend/routes/: user_routes.py
backend/services/: broadcast_service.py
(+1391 files in other folders)
